--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,19 @@ body {
 
 h1 {
     color: black;
+    padding: 1em;
 }
 
-p {
+#bio {
     color: brown;
+    padding: 2em;
+    border: 1px solid;
+    margin: 1em;
+}
+
+#topten {
+    color: rgb(54, 42, 165);
+    padding: 2em;
+    border: 1px solid;
+    margin: 1em;
 }
